# stock_ai

./: .env.sample  .gitattributes  .gitignore  2026-04-04-111613-lets-add-new-chapter-to-docsdesignai-day-trad.txt  CLAUDE.md  Cargo.toml  analysis_result.json  analyze.py  build.rs  hmm_2330.html  hmm_test.html  package.json  report_2317_TW.html  requirements.txt  yf-query.ts
.agent/memory/develop/: project-architecture.md  stock-api-cli-architecture.md
.agent/memory/skill--fbs-api/: MEMORY.md  futures-condition-orders.md  futures-market-data.md  futures-trading.md  options-trading.md  quickstart.md  (+6 more)
.claude/: settings.json
bun_app/fbs_app/: package.json  start.sh  tsconfig.json
crates/quant_trade_cli/: Cargo.toml
crates/quant_trade_cli/src/: alert.rs  app.rs  capture.rs  main.rs  sim.rs
crates/quant_trade_cli/src/data/: db.rs  fake_tick.rs  geographic.rs  mod.rs  tick_source.rs  types.rs  watchlist.rs
crates/quant_trade_cli/src/ui/: analysis.rs  chart.rs  checklist.rs  dashboard.rs  mod.rs  overview.rs  replay.rs  scan_list.rs  theme.rs  whale_panel.rs
crates/quant_trade_cli/src/whale/: aiming.rs  energy.rs  mod.rs  spike.rs  stop_loss.rs  welford.rs
crates/quant_trade_signal_tui/: Cargo.toml
crates/quant_trade_signal_tui/src/: alert.rs  app.rs  detector.rs  main.rs  state_machine.rs  stock_view.rs  types.rs  ui.rs  web.rs  webui.html
crates/quant_trade_signal_webui/: Cargo.toml  build.rs
crates/quant_trade_signal_webui/src/: alert.rs  app.rs  hmm.rs  main.rs  mock_feed.rs  stock_view.rs  types.rs  web.rs  webui_fallback.html
crates/quant_trade_signal_webui/webui/: package.json  tsconfig.json
crates/quant_trade_signal_webui/webui/src/: alerts.ts  app.ts  dom.ts  i18n.ts  keyboard.ts  orderbook.ts  radar.ts  state.ts  status.ts  tabs.ts  tickfeed.ts  types.ts
crates/shioaji-mock/: Cargo.toml
crates/stock-core/: Cargo.toml
crates/stock-server/: Cargo.toml  build.rs
crates/stock-server/src/: main.rs
crates/stock-server/webui/: package.json
crates/stock-server/webui/src/: app.tsx
docs/: phase1-finish.md  prompt-02-market-data-service.txt  prompt-03-backend-service.txt  prompt-04-frontend-page.txt  vibe-coding-05-quick-start-script.txt
docs/api_doc/: sinotrade_llm_full.txt
docs/fbs/: llms-full.txt
docs/plan/: hmm-quant-assistant-todo.md  phase1-ch02-market-data-service.md  phase1-ch02-market-data.md  phase1-ch03-python-integration.md  phase1-ch03-web-service.md  phase1-ch04-frontend.md  phase1-ch05-dev-scripts.md  phase1-todo.md  quant-cli-architecture.md  quantitative-backtesting-system-phase1.md  stock-registry-ui.md
docs/plan-phase1-planning/: hmm-quant-assistant-todo.md  phase1-ch01-backend-enhancement.md  phase1-ch01-project-skeleton.md  phase1-ch05-startup-scripts.md  pipeline-architecture.md  quantitative-backtesting-system-phase1.md
quant_analysis_cli/bun/: package.json  tsconfig.json
quant_analysis_cli/rust/: README.md
quant_cli/: __init__.py  __main__.py  indicators.py  report.py
quant_cli/sources/: __init__.py  alpha_vantage.py  base.py  yfinance_src.py
scripts/: claude-offline-download.ps1  claude-offline-download.sh  claude-offline-install.ps1  claude-origin.README.md  claude-origin.ps1  claude-origin.sh  deepseek-cc.sh  force_rsync_keep_git.sh  glm-team.sh  glm.ps1  glm.sh  glm.sh.README.md  glm5-turbo.ps1  memory-acp.js  pdf_backend_benchmark.sh  run-smart-test.sh  run_surreal.sh  rust-benchmark.sh  rust-config.sh  setup-dev-env.sh  smart-test.sh  start.sh  statusline-command.ps1.INSTRUCT.md  statusline-command.sh.INSTRUCT.md  stop.sh  test_agent_match.sh  tmux-teammate.sh  upload_labb.sh  verify-knowledge-e2e.sh
src/: main.rs
stock_api_cli/bun/: package.json
stock_api_cli/rust/: README.md
tests/fbs_nodejs/: README.md  history.ts  login.ts  realtime-books.ts
webui/src/: app.tsx
(+81 files in other folders)
