[package]
name = "stock_ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stock_ai"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
