[workspace]
resolver = "2"
members = [
    "crates/stock-core",
    "crates/stock-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
