[package]
name = "quant_trade_signal_webui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quant_trade_signal_webui"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { version = "4", features = ["derive"] }
shioaji-mock = { path = "../shioaji-mock" }

[dev-dependencies]
insta = "1"
